# kernel-test

./: Cargo.toml  kernel.elf  linker.ld  rust-toolchain.toml
.cargo/: config  config.toml
src/: fdt.rs  main.rs  rv64_mm.rs
