[package]
name = "multiboot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { version = "0.13.0", features = ["s-mode"] }
riscv-rt = { version = "0.14.0", features = ["s-mode"] }
buddy_allocator = { path = "/home/heinz/workspace/OScompetition/osdev-my/crates/buddy_allocator" }
eonix_mm = { path = "/home/heinz/workspace/OScompetition/osdev-my/crates/eonix_mm" }
intrusive_list = { path = "/home/heinz/workspace/OScompetition/osdev-my/crates/intrusive_list" }
sbi = "0.3.0"
spin = "0.10.0"
