[package]
name = "multiboot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { version = "0.13.0", features = ["s-mode"] }
buddy_allocator = { path = "/home/heinz/workspace/OScompetition/osdev-main/crates/buddy_allocator" }
eonix_mm = { path = "/home/heinz/workspace/OScompetition/osdev-main/crates/eonix_mm" }
intrusive_list = { path = "/home/heinz/workspace/OScompetition/osdev-main/crates/intrusive_list" }
sbi = "0.3.0"
spin = "0.10.0"
fdt = "0.1.5"
